--- a/mtest/mtest.qrc
+++ b/mtest/mtest.qrc
@@ -10,10 +10,7 @@
       <file alias="fonts/FreeSerifMscore.ttf">../fonts/FreeSerifMscore.ttf</file>
       <file alias="fonts/FreeSerifBold.ttf">../fonts/FreeSerifBold.ttf</file>
       <file alias="fonts/FreeSans.ttf">../fonts/FreeSans.ttf</file>
-      <file alias="fonts/mscore_tab_baroque.ttf">../fonts/mscore_tab_baroque.ttf</file>
-      <file alias="fonts/mscore_tab_modern.ttf">../fonts/mscore_tab_modern.ttf</file>
-      <file alias="fonts/mscore_tab_renaiss.ttf">../fonts/mscore_tab_renaiss.ttf</file>
-      <file alias="fonts/mscore_tab_renaiss2.ttf">../fonts/mscore_tab_renaiss2.ttf</file>
+      <file alias="fonts/mscoreTab.ttf">../fonts/mscoreTab.ttf</file>
       <file alias="fonts/fonts_figuredbass.xml">../fonts/fonts_figuredbass.xml</file>
       <file alias="fonts/mscore-BC.ttf">../fonts/mscore-BC.ttf</file>
 
