--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -26,7 +26,7 @@
       <file alias="fonts/FreeSerifMscore.ttf">../fonts/FreeSerifMscore.ttf</file>
       <file alias="fonts/FreeSerifBold.ttf">../fonts/FreeSerifBold.ttf</file>
       <file alias="fonts/FreeSans.ttf">../fonts/FreeSans.ttf</file>
-      <file alias="fonts/fonts_tabulature.xml">../fonts/fonts_tabulature.xml</file>
+      <file alias="fonts/fonts_tablature.xml">../fonts/fonts_tablature.xml</file>
       <file alias="fonts/mscoreTab.ttf">../fonts/mscoreTab.ttf</file>
       <file alias="fonts/fonts_figuredbass.xml">../fonts/fonts_figuredbass.xml</file>
       <file alias="fonts/mscore-BC.ttf">../fonts/mscore-BC.ttf</file>
