Initial implementation (still in progress)
Former-commit-id: 6ded80cf94c00e3ee9dfc4d7d97a86bd8579041a

--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -720,7 +720,7 @@
                     <item>
                      <widget class="QRadioButton" name="noteValues3">
                       <property name="enabled">
-                       <bool>false</bool>
+                       <bool>true</bool>
                       </property>
                       <property name="text">
                        <string>Stems and beams
