--- a/mscore/measureproperties.ui
+++ b/mscore/measureproperties.ui
@@ -200,13 +200,45 @@
            </spacer>
           </item>
           <item row="1" column="4" colspan="2">
-           <widget class="Awl::DenominatorSpinBox" name="actualN">
-            <property name="minimum">
-             <number>1</number>
+           <widget class="QComboBox" name="actualN">
+            <property name="currentIndex">
+             <number>2</number>
             </property>
-            <property name="maximum">
-             <number>10000</number>
-            </property>
+            <item>
+             <property name="text">
+              <string>1</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>2</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>4</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>8</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>16</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>32</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>64</string>
+             </property>
+            </item>
            </widget>
           </item>
           <item row="0" column="4" colspan="2">
