Ukelele does NOT have an H!
Former-commit-id: 0eaf91dd0bb2cb92527b6581685682b2779ff0e7

--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -311,7 +311,7 @@
                 </item>
                 <item>
                  <property name="text">
-                  <string comment="tablature type">4 strings (bass, hukelele)</string>
+                  <string comment="tablature type">4 strings (bass, ukelele)</string>
                  </property>
                 </item>
                 <item>
