--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -311,7 +311,7 @@
                 </item>
                 <item>
                  <property name="text">
-                  <string comment="tablature type">4 strings (bass, ukelele)</string>
+                  <string comment="tablature type">4 strings (bass, ukulele)</string>
                  </property>
                 </item>
                 <item>
