--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -955,7 +955,7 @@
                    <item row="0" column="1">
                     <widget class="QCheckBox" name="showRests">
                      <property name="enabled">
-                      <bool>false</bool>
+                      <bool>true</bool>
                      </property>
                      <property name="text">
                       <string>Show Rests</string>
