TAB: added ukulele and bandurria presets to EditStaffType dlg
Former-commit-id: 80afda105a7039ffd338bcb51c5b0329c6649136

--- a/mscore/stafftype.ui
+++ b/mscore/stafftype.ui
@@ -306,12 +306,22 @@
                 </property>
                 <item>
                  <property name="text">
-                  <string comment="tablatture type">6 strings (guitar)</string>
+                  <string comment="tablatture type">6 strings (generic guitar)</string>
                  </property>
                 </item>
                 <item>
                  <property name="text">
-                  <string comment="tablature type">4 strings (bass, ukulele)</string>
+                  <string comment="tablature type">4 strings (generic bass)</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>ukulele</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text">
+                  <string>bandurria</string>
                  </property>
                 </item>
                 <item>
