--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -5264,10 +5264,17 @@
       <longName>Mandolin</longName>
       <shortName>Mdn.</shortName>
       <description>Mandolin</description>
+      <Tablature>
+        <frets>24</frets>
+        <string>55</string>
+        <string>62</string>
+        <string>69</string>
+        <string>76</string>
+        </Tablature>
       <clef>G</clef>
       <barlineSpan>1</barlineSpan>
       <aPitchRange>55-85</aPitchRange>
-      <pPitchRange>55-85</pPitchRange>
+      <pPitchRange>55-100</pPitchRange>
       <Channel>
         <program value="24"/>
         </Channel>
@@ -5277,10 +5284,59 @@
       <longName>Mandola</longName>
       <shortName>Mda.</shortName>
       <description>Mandola</description>
+      <Tablature>
+        <frets>24</frets>
+        <string>48</string>
+        <string>55</string>
+        <string>62</string>
+        <string>69</string>
+        </Tablature>
       <clef>C3</clef>
       <barlineSpan>1</barlineSpan>
       <aPitchRange>48-87</aPitchRange>
-      <pPitchRange>48-87</pPitchRange>
+      <pPitchRange>48-93</pPitchRange>
+      <Channel>
+        <program value="24"/>
+        </Channel>
+      </Instrument>
+
+    <Instrument id="mandocello">
+      <longName>Mandocello</longName>
+      <shortName>Mncl.</shortName>
+      <description>Mandocello</description>
+      <extended>1</extended>
+      <Tablature>
+        <frets>24</frets>
+        <string>36</string>
+        <string>43</string>
+        <string>50</string>
+        <string>57</string>
+        </Tablature>
+      <clef>F</clef>
+      <barlineSpan>1</barlineSpan>
+      <aPitchRange>36-75</aPitchRange>
+      <pPitchRange>36-81</pPitchRange>
+      <Channel>
+        <program value="24"/>
+        </Channel>
+      </Instrument>
+
+    <Instrument id="OctaveMandolin">
+      <longName>Octave Mandolin</longName>
+      <shortName>OM.</shortName>
+      <description>Octave Mandolin</description>
+      <extended>1</extended>
+      <Tablature>
+        <frets>24</frets>
+        <string>43</string>
+        <string>50</string>
+        <string>57</string>
+        <string>64</string>
+        </Tablature>
+      <clef>G8vb</clef>
+      <barlineSpan>1</barlineSpan>
+      <aPitchRange>43-73</aPitchRange>
+      <pPitchRange>36-88</pPitchRange>
       <Channel>
         <program value="24"/>
         </Channel>
