German translation of the two new mandolins
Former-commit-id: a0fafb279f7ede1afbe30ec53037c7859b4e445d

--- a/share/templates/instruments_de.xml
+++ b/share/templates/instruments_de.xml
@@ -1924,6 +1924,18 @@
       <description>Mandola</description>
       </Instrument>
 
+    <Instrument id="mandocello">
+      <longName>Mandoloncello</longName>
+      <shortName>Mncl.</shortName>
+      <description>Mandoloncello</description>
+      </Instrument>
+
+    <Instrument id="OctavMandolin">
+      <longName>Oktav-Mandoline</longName>
+      <shortName>OM.</shortName>
+      <description>Oktav-Mandoline</description>
+      </Instrument>
+
     <Instrument id="hosozao-shamisen">
       <longName>Hosozao Shamisen</longName>
       <shortName>Ho. Sh.</shortName>
