fix #18396: Make Default Voice in Edit Drumset a combo box
Former-commit-id: deb8c960ffdf3307a61c814144733a7de18f2ec7

--- a/mscore/editdrumset.ui
+++ b/mscore/editdrumset.ui
@@ -204,13 +204,27 @@
         </widget>
        </item>
        <item row="4" column="1">
-        <widget class="QSpinBox" name="voice">
-         <property name="minimum">
-          <number>1</number>
-         </property>
-         <property name="maximum">
-          <number>4</number>
-         </property>
+        <widget class="QComboBox" name="voice">
+         <item>
+          <property name="text">
+           <string>1</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>2</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>3</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>4</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item row="5" column="0">
