Add pure trill line type
Former-commit-id: 6cd5de0d0e4ce337d7bb51eb3cdb4689107fd668

--- a/mscore/inspector_trill.ui
+++ b/mscore/inspector_trill.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>287</width>
-    <height>68</height>
+    <height>86</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -74,14 +74,17 @@
          <string>prall prall</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>pure line</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="musescore.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
