Revert unintentional changes in trill inspectr ui
Former-commit-id: aa8ff15d0da475d9506423e066e8490eee149f54

--- a/mscore/inspector_trill.ui
+++ b/mscore/inspector_trill.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>287</width>
-    <height>86</height>
+    <height>68</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -85,6 +85,8 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="musescore.qrc"/>
+ </resources>
  <connections/>
 </ui>
