add wavy line to palette
Former-commit-id: d54d2df50040f45b64313b39a403bfd25f900438

--- a/mscore/inspector_trill.ui
+++ b/mscore/inspector_trill.ui
@@ -76,7 +76,7 @@
        </item>
        <item>
         <property name="text">
-         <string>pure line</string>
+         <string>wavy line</string>
         </property>
        </item>
       </widget>
